# Content

./: CMakeLists.txt
Model_Colocviu/Exercitiul1/: main.cpp
Model_Colocviu/Exercitiul2/: main.cpp
Model_Colocviu/Exercitiul3/: main.cpp
Model_Colocviu/my_solve/: ex1.cpp  ex2.cpp  ex3.cpp
codes/: graph.cpp
codes/curs_2_3/: CMakeLists.txt  articulation_points_or_cut_vertices_in_graph.cpp  biconnected_components.cpp  biconnected_graph.cpp  detect_cycle_dfs.cpp  detect_cycle_dfs_2.cpp  kosaraju_scc_dfs.cpp  topological_sorting.cpp
codes/curs_4_5/: dijkstra.cpp
codes/curs_6_7/: bellman_ford.cpp  dijkstra.cpp
codes/curs_9_9/: ford_fulkerson_method.cpp
codes/sheets_algo/: Bellman_Ford_2.cpp  Componente_Tari_Conexe_Kosaraju_2.cpp  Dijkstra_2.cpp  Graf_Bipartit_2.cpp  Kruskal_APM_2.cpp  Muchii_Puncte_Critice_2.cpp  Parcurgeri_Graf_Neorientat_2.cpp  Parcurgeri_Graf_Orientat_2.cpp  Sortare_Topologica_2.cpp
tema1/: Alhafez_nabil_1_obligatoriu_1.cpp  Alhafez_nabil_1_obligatoriu_2.cpp  Alhafez_nabil_1_obligatoriu_3.cpp  Alhafez_nabil_1_obligatoriu_4.cpp  Alhafez_nabil_1_obligatoriu_5.cpp  CMakeLists.txt
tema2/: Alhafez_nabil_2_obligatoriu_1.cpp  Alhafez_nabil_2_obligatoriu_2.cpp  Alhafez_nabil_2_obligatoriu_3.cpp  Alhafez_nabil_2_obligatoriu_4.cpp  Alhafez_nabil_2_obligatoriu_5.cpp  Alhafez_nabil_2_optional_12.cpp  Alhafez_nabil_2_optional_6.cpp
tema3/: Alhafez_nabil_3_obligatoriu_2.cpp  Alhafez_nabil_3_obligatoriu_3.cpp  Alhafez_nabil_3_obligatoriu_4.cpp  Alhafez_nabil_3_obligatoriu_5.cpp  Alhafez_nabil_3_obligatoriu_6.cpp  Alhafez_nabil_3_optional_6.cpp
tema4/: Alhafez_nabil_optional_1.cpp  Alhafez_nabil_optional_2.cpp  Alhafez_nabil_optional_3.cpp  Alhafez_nabil_optional_4.cpp  Alhafez_nabil_optional_5.cpp  Alhafez_nabil_optional_6.cpp  Alhafez_nabil_optional_7.cpp  rezolvarile.txt
test-cases/: edges.txt  ex1.txt
test_laborator/: ex1.cpp  ex2.cpp  ex3.cpp
